# FOFTracking

./: .gitignore  Brainstorm  CMakeLists.txt  Haar Command.txt  README.md
Aetherspark-Desktop/: CMakeLists.txt  cascades.qrc  main.cpp
Aetherspark-Desktop/cascades/: five-cascade.xml  five.xml
Aetherspark-Desktop/include/: AEDllDefines.h  AEGLVideoWidget.h  AEMainWindow.h  AEVideoWidget.h
Aetherspark-Desktop/src/: AEGLVideoWidget.cpp  AEMainWindow.cpp  AEVideoWidget.cpp
libaecapture/: CMakeLists.txt
libaecapture/include/: AECaptureDevice.h  AEDllDefines.h
libaecapture/src/: AECaptureDeviceLinux.cpp  AECaptureDeviceMac.mm  AECaptureDeviceWin.cpp
libaerecognition/: CMakeLists.txt
libaerecognition/include/: AEDllDefines.h  AEDualSort.h  AEFlipFilter.h  AEHaarFilter.h  AEImagePipelineFilter.h  AEImageProcessingPipeline.h  AETrackingFilter.h
libaerecognition/src/: AEFlipFilter.cpp  AEHaarFilter.cpp  AEImageProcessingPipeline.cpp  AETrackingFilter.cpp
